--- a/_comicScrapV2Custom/langs/default.xml
+++ b/_comicScrapV2Custom/langs/default.xml
@@ -51,6 +51,7 @@ inspired by ComicBook theme by TMNTturtleguy at https://github.com/TMNTturtleguy
 						<lang.allTiles>⊂source⊃       unified source</lang.allTiles>
 		   <lang.gamelistIllustrations>⊂gamelists⊃    display illustrations in gamelists</lang.gamelistIllustrations>
 			   <lang.gamelistAlignment>               text lists alignment (except basic view)</lang.gamelistAlignment>
+				   <lang.detailedVideo>               detailed games preview</lang.detailedVideo>
 					   <lang.gridVideo>               grid games preview</lang.gridVideo>
 					   <lang.showVideo>               show game video</lang.showVideo>
 
@@ -407,6 +408,17 @@ inspired by ComicBook theme by TMNTturtleguy at https://github.com/TMNTturtleguy
 	<lang.2000ms>after 2 seconds</lang.2000ms>
 	<lang.5000ms>after 5 seconds</lang.5000ms>
 	<lang.never>never</lang.never>
+
+	<lang.stretchFull>full frame (stretched)</lang.stretchFull>
+	<lang.respectFull>full frame (respected)</lang.respectFull>
+
+	<lang.respectMed>medium size (respected)</lang.respectMed>
+	<lang.respectMedPatch>medium size, black patch (respected)</lang.respectMedPatch>
+	<lang.respectMedFanart>medium size, fanart fade (respected)</lang.respectMedFanart>
+
+	<lang.respectSmall>small size (respected)</lang.respectSmall>
+	<lang.respectSmallPatch>small size, black patch (respected)</lang.respectSmallPatch>
+	<lang.respectSmallFanart>small size, fanart fade (respected)</lang.respectSmallFanart>
 
 </variables>
 
